made some visual changes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,6 +18,12 @@ div {
 footer {
   color: #AAA;
 }
+footer ul {
+  list-style: none;
+}
+.copyright {
+  border-top: 1px solid #AAA;
+}
 .brand-and-logo img {
   height: 2em;
   width: 2em;
